sql/ddl_log.h
@@ -46,8 +46,8 @@ enum ddl_log_entry_code
 
 
 /*
-  When adding things below, also add an entry to ddl_log_entry_phases in
-  ddl_log.cc
+  When adding things below, also add an entry to ddl_log_action_names and
+  ddl_log_entry_phases in ddl_log.cc
 */
 
 enum ddl_log_action_code
@@ -57,26 +57,32 @@ enum ddl_log_action_code
     perform.
   */
 
+  DDL_LOG_UNKNOWN_ACTION= 0,
+
   /* Delete a .frm file or a table in the partition engine */
-  DDL_LOG_DELETE_ACTION= 0,
+  DDL_LOG_DELETE_ACTION= 1,
 
   /* Rename a .frm fire a table in the partition engine */
-  DDL_LOG_RENAME_ACTION= 1,
+  DDL_LOG_RENAME_ACTION= 2,
 
   /*
     Rename an entity after removing the previous entry with the
     new name, that is replace this entry.
   */
-  DDL_LOG_REPLACE_ACTION= 2,
+  DDL_LOG_REPLACE_ACTION= 3,
 
   /* Exchange two entities by renaming them a -> tmp, b -> a, tmp -> b */
-  DDL_LOG_EXCHANGE_ACTION= 3,
+  DDL_LOG_EXCHANGE_ACTION= 4,
   /*
     log do_rename(): Rename of .frm file, table, stat_tables and triggers
   */
-  DDL_LOG_RENAME_TABLE_ACTION= 4,
-  DDL_LOG_RENAME_VIEW_ACTION= 5,
-  DDL_LOG_LAST_ACTION                           /* End marker */
+  DDL_LOG_RENAME_TABLE_ACTION= 5,
+  DDL_LOG_RENAME_VIEW_ACTION= 6,
+  DDL_LOG_DROP_TABLE_INIT_ACTION= 7,
+  DDL_LOG_DROP_TABLE_ACTION= 8,
+  DDL_LOG_DROP_VIEW_INIT_ACTION= 9,
+  DDL_LOG_DROP_VIEW_ACTION= 10,
+  DDL_LOG_LAST_ACTION                          /* End marker */
 };
 
 
@@ -94,6 +100,14 @@ enum enum_ddl_log_rename_table_phase {
   DDL_RENAME_PHASE_TRIGGER= 0,
   DDL_RENAME_PHASE_STAT,
   DDL_RENAME_PHASE_TABLE,
+};
+
+enum enum_ddl_log_drop_table_phase {
+  DDL_DROP_PHASE_TABLE=0,
+  DDL_DROP_PHASE_TRIGGER,
+  DDL_DROP_PHASE_COLLECT,
+  DDL_DROP_PHASE_RESET,  /* Reset found list of dropped tables */
+  DDL_DROP_PHASE_END
 };
 
 /*
@@ -183,6 +197,17 @@ bool ddl_log_rename_view(THD *thd, DDL_LOG_STATE *ddl_state,
                          const LEX_CSTRING *org_alias,
                          const LEX_CSTRING *new_db,
                          const LEX_CSTRING *new_alias);
-
+bool ddl_log_drop_table_init(THD *thd, DDL_LOG_STATE *ddl_state,
+                             const LEX_CSTRING *comment);
+bool ddl_log_drop_view_init(THD *thd, DDL_LOG_STATE *ddl_state);
+bool ddl_log_drop_table(THD *thd, DDL_LOG_STATE *ddl_state,
+                        handlerton *hton,
+                        const LEX_CSTRING *path,
+                        const LEX_CSTRING *db,
+                        const LEX_CSTRING *table);
+bool ddl_log_drop_view(THD *thd, DDL_LOG_STATE *ddl_state,
+                        const LEX_CSTRING *path,
+                        const LEX_CSTRING *db,
+                        const LEX_CSTRING *table);
 extern mysql_mutex_t LOCK_gdl;
 #endif /* DDL_LOG_INCLUDED */
