sql/log.cc
@@ -9936,6 +9936,7 @@ int TC_LOG::using_heuristic_recover()
 int TC_LOG_BINLOG::open(const char *opt_name)
 {
   int      error= 1;
+  DBUG_ENTER("TC_LOG_BINLOG::open");
 
   DBUG_ASSERT(total_ha_2pc > 1);
   DBUG_ASSERT(opt_name);
@@ -9945,7 +9946,7 @@ int TC_LOG_BINLOG::open(const char *opt_name)
   {
     /* There was a failure to open the index file, can't open the binlog */
     cleanup();
-    return 1;
+    DBUG_RETURN(1);
   }
 
   if (using_heuristic_recover())
@@ -9955,12 +9956,12 @@ int TC_LOG_BINLOG::open(const char *opt_name)
     open(opt_name, 0, 0, WRITE_CACHE, max_binlog_size, 0, TRUE);
     mysql_mutex_unlock(&LOCK_log);
     cleanup();
-    return 1;
+    DBUG_RETURN(1);
   }
 
   error= do_binlog_recovery(opt_name, true);
   binlog_state_recover_done= true;
-  return error;
+  DBUG_RETURN(error);
 }
 
 /** This is called on shutdown, after ha_panic. */
@@ -10424,6 +10425,17 @@ start_binlog_background_thread()
 }
 
 
+/*
+  Execute recovery of the binary log
+
+  @param do_xa
+         if true:  Collect all Xid events and call ha_recover().
+         if false: Collect only Xid events from Query events. This is
+                   used to disable entries in the ddl recovery log that
+                   are found in the binary log (and thus already executed and
+                   logged and thus don't have to be redone).
+*/
+
 int TC_LOG_BINLOG::recover(LOG_INFO *linfo, const char *last_log_name,
                            IO_CACHE *first_log,
                            Format_description_log_event *fdle, bool do_xa)
@@ -10442,16 +10454,16 @@ int TC_LOG_BINLOG::recover(LOG_INFO *linfo, const char *last_log_name,
   bool last_gtid_standalone= false;
   bool last_gtid_valid= false;
 #endif
+  DBUG_ENTER("TC_LOG_BINLOG::recover");
 
   if (! fdle->is_valid() ||
-      (do_xa && my_hash_init(key_memory_binlog_recover_exec, &xids,
-                             &my_charset_bin, TC_LOG_PAGE_SIZE/3, 0,
-                             sizeof(my_xid), 0, 0, MYF(0))))
+      (my_hash_init(key_memory_binlog_recover_exec, &xids,
+                    &my_charset_bin, TC_LOG_PAGE_SIZE/3, 0,
+                    sizeof(my_xid), 0, 0, MYF(0))))
     goto err1;
 
-  if (do_xa)
-    init_alloc_root(key_memory_binlog_recover_exec, &mem_root,
-                    TC_LOG_PAGE_SIZE, TC_LOG_PAGE_SIZE, MYF(0));
+  init_alloc_root(key_memory_binlog_recover_exec, &mem_root,
+                  TC_LOG_PAGE_SIZE, TC_LOG_PAGE_SIZE, MYF(0));
 
   fdle->flags&= ~LOG_EVENT_BINLOG_IN_USE_F; // abort on the first error
 
@@ -10489,8 +10501,9 @@ int TC_LOG_BINLOG::recover(LOG_INFO *linfo, const char *last_log_name,
       case QUERY_EVENT:
       {
         Query_log_event *query_ev= (Query_log_event*) ev;
-        if (do_xa && query_ev->xid)
+        if (query_ev->xid)
         {
+          DBUG_PRINT("QQ", ("xid: %llu xid"));
           DBUG_ASSERT(sizeof(query_ev->xid) == sizeof(my_xid));
           uchar *x= (uchar *) memdup_root(&mem_root,
                                           (uchar*) &query_ev->xid,
@@ -10581,8 +10594,6 @@ int TC_LOG_BINLOG::recover(LOG_INFO *linfo, const char *last_log_name,
       ev= NULL;
     }
 
-    if (!do_xa)
-      break;
     /*
       If the last binlog checkpoint event points to an older log, we have to
       scan all logs from there also, to get all possible XIDs to recover.
@@ -10640,13 +10651,12 @@ int TC_LOG_BINLOG::recover(LOG_INFO *linfo, const char *last_log_name,
   {
     if (ha_recover(&xids))
       goto err2;
-    if (ddl_log_close_binlogged_events(&xids))
-      goto err2;
-
-    free_root(&mem_root, MYF(0));
-    my_hash_free(&xids);
   }
-  return 0;
+  if (ddl_log_close_binlogged_events(&xids))
+    goto err2;
+  free_root(&mem_root, MYF(0));
+  my_hash_free(&xids);
+  DBUG_RETURN(0);
 
 err2:
   delete ev;
@@ -10655,17 +10665,15 @@ err2:
     end_io_cache(&log);
     mysql_file_close(file, MYF(MY_WME));
   }
-  if (do_xa)
-  {
-    free_root(&mem_root, MYF(0));
-    my_hash_free(&xids);
-  }
+  free_root(&mem_root, MYF(0));
+  my_hash_free(&xids);
+
 err1:
   sql_print_error("Crash recovery failed. Either correct the problem "
                   "(if it's, for example, out of memory error) and restart, "
                   "or delete (or rename) binary log and start mysqld with "
                   "--tc-heuristic-recover={commit|rollback}");
-  return 1;
+  DBUG_RETURN(1);
 }
 
 
